@@ -28,10 +28,11 @@ RunXQTS.class:  RunXQTS.java
 
 XQTS_DIR = @XQTS_PATH@
 XQTS_CATALOG = $(XQTS_DIR)/XQTSCatalog.xml
+XQTS_JAVA_FLAGS = -Xmx100m
 
 check-XQTS: RunXQTS.class
 	CLASSPATH=$(KAWALIB) \
-	  $(JAVA) gnu.xquery.testsuite.RunXQTS $(XQTS_DIR)
+	  $(JAVA) $(XQTS-JAVA_FLAGS) gnu.xquery.testsuite.RunXQTS $(XQTS_DIR)
 	@if diff -b $(srcdir)/XQTS-trace.exp XQuery-trace.log; \
 	  then echo '# XQTS trace output matches'; \
 	  else echo FAIL XQuery trace output mismatch; fi
